<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeFragment">

    <EditText
        android:id="@+id/etCodTime"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnBuscarTime"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarTime"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNomeTime"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etCidadeTime"
        app:layout_constraintEnd_toEndOf="@+id/etCodTime"
        app:layout_constraintStart_toStartOf="@+id/etCodTime"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarTime" />

    <EditText
        android:id="@+id/etCidadeTime"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="95dp"
        android:ems="10"
        android:hint="@string/cidade"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnListarTime"
        app:layout_constraintEnd_toEndOf="@+id/etNomeTime"
        app:layout_constraintStart_toStartOf="@+id/etNomeTime"
        app:layout_constraintTop_toBottomOf="@+id/etNomeTime" />

    <Button
        android:id="@+id/btnBuscarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="29dp"
        android:text="@string/Buscar"
        app:layout_constraintBottom_toTopOf="@+id/etNomeTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodTime"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnListarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/Listar"
        app:layout_constraintBottom_toTopOf="@+id/btnModificarTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnInserirTime"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <Button
        android:id="@+id/btnModificarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="45dp"
        android:text="@string/Modificar"
        app:layout_constraintBottom_toTopOf="@+id/tvListarTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarTime" />

    <Button
        android:id="@+id/btnInserirTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="32dp"
        android:text="@string/Inserir"
        app:layout_constraintBottom_toTopOf="@+id/btnExcluirTime"
        app:layout_constraintEnd_toStartOf="@+id/btnListarTime"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExcluirTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Excluir"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnModificarTime"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarTime"
        app:layout_constraintHorizontal_bias="0.657"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvListarTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificarTime" />

</androidx.constraintlayout.widget.ConstraintLayout>